<resources>


    <string name="password">Password</string>
    <string name="Distinction_prompt">Select your Distinction</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_user">Register User</string>
    <string name="register">Register</string>
    <string name="usr_reg">User Registration</string>
    <string name="efname">First Name</string>
    <string name="elast_name">Last Name</string>
    <string name="te_mail">E-Mail ID</string>
    <string name="e_e_mail">Enter Your E-Mail ID</string>
    <string name="moblie">moblie</string>
    <string name="mobile">mobile</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="Address">Address</string>
    <string name="enter_your_residential_address">Enter your residential address</string>
    <string name="Mobile">Mobile</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="re_enter">Re-enter</string>
    <string name="app_name">Ayush</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="e_mail_id">E-Mail ID</string>
    <string name="usr_name">Username</string>
    <string name="blogin1">Login</string>
    <string name="usr3">Username</string>
    <string name="app_drawer">App drawer</string>
    <string name="account">Account</string>
    <string name="credit_card">credit card</string>
    <string name="payment">Payment</string>
    <string name="abishek">Abishek</string>
    <string name="item">item</string>
    <string name="comm">communicate</string>
    <string name="profile">Profile</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string-array name="Distinction_array">
        <item>Patient</item>
        <item>Hospital</item>
        <item>Admin</item>
    </string-array>
    <string-array name="Lang_array">
        <item>Tamil</item>
        <item>English</item>
        <item>Telugu</item>
    </string-array>
    <string name="select_hospital">Select Your Hospital</string>
    <string-array name="Select_Hospital_array">
        <item>SKS Hospital</item>
        <item>Manipal Hospital</item>
        <item>KMCH</item>
        <item>GL Hospital</item>
        <item>Apollo Hospitals</item>
    </string-array>
    <string name="select_your_doc_prompt">Select your Doctor</string>
    <string-array name="select_doc_array">
        <item>Dr.K.Srinath Reddy</item>
        <item>Dr.Karthick.S</item>
        <item>Dr.Maneesha</item>
        <item>Dr.Muralikrishnan</item>
        <item>Dr.Vishnu</item>
        <item>Dr.Revathi</item>
        <item>Dr.Mahendran</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="abisheksalem_gmail_com">abisheksalem@gmail.com</string>
    <string name="communicate">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consulting_a_doctor">Consulting a Doctor</string>
    <string name="chat_with_expert">Chat with Expert</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="appointment_status_bar">Appointment Status Bar</string>
    <string name="book_ambulance">Book Ambulance</string>
    <string name="route_map">Route Map</string>
    <string name="facebook">facebook</string>
    <string name="orders">Orders</string>
    <string name="consultations">consultations</string>
    <string name="my_doctors">My Doctors</string>
    <string name="medical_records">Medical Records</string>
    <string name="reminders">Reminders</string>
    <string name="chat_with_doctor">chat with doctor</string>
    <string name="women_s_health">Women\'s Health</string>
    <string name="skin_hair">Skin and Hair</string>
    <string name="child_specialist">child Specialist</string>
    <string name="general_physician">General Physician</string>
    <string name="dental_care">Dental Care</string>
    <string name="ent">ENT</string>
    <string name="homopathy">Homopathy</string>
    <string name="bone_and_points">Bone and Points</string>
    <string name="sex_specialist">Sex Specialist</string>
    <string name="eye_specialist">Eye Specialist</string>
    <string name="digestive_issues">Digestive Issues</string>
    <string name="mental_wellness">Mental Wellness</string>
    <string name="physiotheraphy">Physiotheraphy</string>
    <string name="diabetes_management">Diabetes Management</string>
    <string name="brain_and_nerves">Brain and Nerves</string>
    <string name="kidney_and_urinary_issues">Kidney and Urinary Issues</string>
    <string name="ayurvedha">Ayurvedha</string>
    <string name="general_surgery">General Surgery</string>
    <string name="lungs_and_breathing">Lungs and Breathing</string>
    <string name="heart">Heart</string>
    <string name="cancer">Cancer</string>
    <string name="general">General</string>
    <string name="looking_for_more">Looking For More?</string>
    <string name="write_message">Write a message</string>
    <string name="new_prescription">New Prescription</string>
    <string name="existing_pharmacy">Existing Pharmacy</string>
    <string name="enter_your_appointment_id">Enter Your Appointment ID</string>
    <string name="check">check</string>
    <string name="enter">Enter</string>
    <string name="name">Name:</string>
    <string name="karthick">Karthick</string>
    <string name="age">Age:</string>
    <string name="_18">18</string>
    <string name="cardiac_surgeon">Cardiac Surgeon</string>
    <string name="fix_appointment">Fix Appointment</string>
    <string name="qualification">Qualification:</string>
    <string name="home">Home</string>
    <string name="gg">gg</string>
    <string name="appointments">Appointments</string>
    <string name="lab_test">lab test</string>
    <string name="adding_medicine_code_by_doctor">Adding Medicine Code By Doctor</string>
    <string name="my_hospital">My Hospital</string>
    <string name="amount">Amount</string>
    <string name="dr_k_srinath_reddy">Dr.K.Srinath Reddy</string>
    <string name="about">About</string>
    <string name="qualification1">Prof. K. Srinath Reddy is presently President of AIIMS</string>
    <string name="lab">lab</string>
    <string name="blood">Blood</string>
    <string name="notes">Notes</string>
    <string name="name2">Name</string>
    <string name="upi_id">UPI ID</string>
    <string name="read_about_health">Read about health</string>
    <string name="help_center">help center</string>
    <string name="route_map_in_hospital">route map in hospital</string>
    <string name="route_map_to_hospital">route map to hospital</string>
    <string name="existing_prescription">Existing prescription</string>
    <string name="_54">54</string>
    <string name="send_by_upi_transaction">send by upi transaction</string>
    <string name="fix_the_appointment">Fix the Appointment</string>
</resources>