<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation= "vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/neww"
        />
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/na"
            android:layout_width="150dp"
            android:layout_height="52dp"
            tools:layout_editor_absoluteY="210dp"
            android:text="@string/name"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/fn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/efname"
            android:paddingHorizontal="15dp"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="210dp" />

        <EditText
            android:id="@+id/ln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/elast_name"
            android:paddingLeft="5dp"
            android:paddingStart="20dp"
            android:layout_marginLeft="20dp"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="210dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/e1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usr_name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/em1"
            android:layout_marginStart="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_username"
            android:layout_marginLeft="50dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">



        <TextView
            android:id="@+id/e"
            android:layout_width="150dp"
            android:layout_height="52dp"
            android:text="@string/e_mail_id"
            android:textSize="25sp" />
        <EditText
            android:id="@+id/em"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/e_e_mail"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mobile"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/mn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="75dp"
            android:hint="@string/enter_your_mobile_number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:text="@string/Address"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/enter_your_residential_address" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:text="@string/password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="80dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:layout_width="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="50dp"
        >
        <TextView
            android:id="@+id/rpwd"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:text="@string/re_enter"
            android:textSize="25sp" />
        <EditText
            android:id="@+id/rpw"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_weight="1"
            android:layout_marginLeft="80dp"
            android:hint="@string/re_enter_your_password"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>
    <Button
        android:id="@+id/rger"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="#FF5722"
        android:text="@string/register"
        android:layout_marginTop="45dp"
        android:textColor="#090303" />
</LinearLayout>