<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="222dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ayush"
        android:id="@+id/img"/>

    <EditText
        android:id="@+id/eusername"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/usr3" />

    <EditText
        android:id="@+id/epwd"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:entries="@array/Distinction_array"
        android:prompt="@string/Distinction_prompt"/>
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:entries="@array/Lang_array"
        android:prompt="@array/Lang_array"/>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/forgotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="#ff23" />
        <TextView
            android:id="@+id/breg"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="15dp"
            android:text="@string/register_user"
            android:textColor="#FF23" />
    </LinearLayout>
    <Button
        android:id="@+id/blogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textColor="#ffffff"
        android:background="#866704"
        android:text="@string/blogin1"/>



</LinearLayout>