<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layoutToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageView
                android:id="@+id/air"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_drawer"
                android:src="@drawable/ic_menu"
                android:tint="@color/colorWhite"
                />
            <TextView
                android:id="@+id/navi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/main_console"
            android:gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ExtraText,MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginBottom="200dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="175dp"
            android:layout_marginStart="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn1"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="9dp"
                android:background="#42ECFF"
                android:text="@string/consulting_a_doctor" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="9dp"
                android:background="#42ECFF"
                android:text="@string/chat_with_expert" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="9dp"
                android:background="#42ECFF"
                android:text="@string/pharmacy" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="9dp"
                android:background="#42ECFF"
                android:text="@string/appointment_status_bar" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="9dp"
                android:background="#42ECFF"
                android:text="@string/book_ambulance" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="9dp"
                android:background="#42ECFF"
                android:text="@string/route_map_in_hospital" />
            <Button
                android:id="@+id/btn7"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="9dp"
                android:background="#42ECFF"
                android:text="@string/route_map_to_hospital" />
        </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:id="@+id/naviv"
        android:layout_height="match_parent"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"
        android:layout_marginTop="60dp"
        >
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
