<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doc_profile_activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="#00BCD4"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="350dp"
                android:src="@drawable/ayush"
                android:id="@+id/mlogo"
                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="70dp"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:layout_marginEnd="55dp"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="115dp"
            android:src="@drawable/srinath_reddy"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/dr_k_srinath_reddy"
                    android:textSize="20sp" />
        </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_54"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/qualification"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/cardiac_surgeon"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/b99"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginStart="200dp"
            android:background="#866704"
            android:textColor="#ffffff"
            android:text="@string/fix_appointment"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>