<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select_hospital">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="#00BCD4"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="350dp"
                android:src="@drawable/ayush"
                android:id="@+id/mlogo"
                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="70dp"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:layout_marginEnd="55dp"/>
        </RelativeLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">
    <TextView
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="220dp"
        android:text="@string/select_hospital"
        android:layout_marginStart="100dp"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <Spinner
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:id="@+id/spinner2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:entries="@array/Select_Hospital_array"
        android:prompt="@string/select_hospital">
    </Spinner>
    <Spinner
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:entries="@array/select_doc_array"
        android:prompt="@string/select_your_doc_prompt">
    </Spinner>
    <Button
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:id="@+id/b88"
        android:layout_marginStart="100dp"
        android:text="@string/enter"
        android:background="#866704"
        android:textColor="#ffffff"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>